--- a/Inicio.CSS
+++ b/Inicio.CSS
@@ -27,83 +27,63 @@ header{
 .navbar {
     display: flex;
     margin-right: 10px;
+	list-style: none;
 }
 .logo{
     text-decoration: none;
 }
-.navbar {
-	background-color: #ffffff;
-	overflow: hidden;
-  }
-  .navbar a {
-	float: left;
-	display: block;
-	color: black;
+.ul, ol {
+	list-style: none;
+	text-decoration: none;
 	font-family: Helvetica;
-	font-size: 20px;
+	font-style: Bold Condensed;
 	text-align: center;
-	padding: 14px 16px;
+	font-size: 420px;
+}
+.nav li a{
+	list-style: none;
+	background-color: #FFFFFF;
+	color: black;
 	text-decoration: none;
-  }
-  .navbar a:hover {
-	background-color: #ffffff;
-	color: black;
-  }
-  .dropdown {
-	float: left;
-	overflow: hidden;
-  }
-  .dropdown .dropbtn {
-	font-size: 20px;
-	border: none;
-	outline: none;
-	color: black;
-	padding: 14px 16px;
-	background-color: inherit;
+	padding: 10px 15px;
+	display: block;
 	font-family: Helvetica;
-	margin: 0;
-  }
-  .navbar a:hover,
-  .dropdown:hover .dropbtn {
-	background-color: #ffffff;
-	color: black;
-  }
-  .dropdown-content {
-	display: none;
+	font-style: Bold Condensed;
+	text-align: center;
+	font-size: 20px;
+}
+.nav li a:hover{
+	list-style: none;
+	background-color: #10a8ce;
+	color: #FFFFFF;
+}
+.nav > li {
+	list-style: none;
+	float: left;
+}
+.nav li ul{
+	list-style: none;
+	display:none;
 	position: absolute;
-	background-color: #ffffff;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-	z-index: 1;
-  }
-  .dropdown-content a {
-	float: none;
-	color: black;
-	padding: 12px 16px;
 	text-decoration: none;
+	min-width: 140px;
+}
+.nav li:hover >ul{
 	display: block;
-	text-align: left;
-  }
-  .dropdown-content a:hover {
-	background-color: #ffffff;
-  }
-  .dropdown:hover .dropdown-content {
-	display: block;
-  }
-  .sub-dropdown {
-	position: absolute;
-	top: 0;
-	left: 100%;
-	min-width: 160px;
-	display: none;
-	background-color: #ffffff;
-  }
-  .sub-dropdown a {
-	color: black;
-  }
-  .dropdown-content:hover .sub-dropdown {
-	display: block;
-  }  
+	text-decoration: none;
+	list-style: none;
+}
+.nav li ul li{
+	position: relative;
+	text-decoration: none;
+	list-style: none;
+}
+.nav li ul li ul{
+	right: -140px;
+	top: 0px;
+	text-decoration: none;
+	list-style: none;
+}
   .Derechosdeautor{
 	color: rgba(0, 0, 0, 1);
 	width: 229px;
